Refs #140518 - Multi term list facet - fix groups spacing..

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -796,9 +796,14 @@ div.ui.modal.facet {
   }
 
   div.by-groups {
+    .group-heading.first {
+      margin-top: 0px;
+    }
+
     .group-heading {
       display: flex;
       align-items: center;
+      margin-top: 1.5em;
       --text-divider-gap: 0.5em;
     }
 
